Fix the uneven lining of piecharts and prettify

--- a/client/components/ComparisonPage/ComparisonPage.scss
+++ b/client/components/ComparisonPage/ComparisonPage.scss
@@ -104,19 +104,16 @@
 
 .comparison-smiley {
   &-grid {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
     width: 100%;
-    margin: 1em 0em 4em 0em;  
+    margin: 1em 0em 4em 0em;
   }
   &-chart-area {
-    width: 425px;
+    max-width: 425px;
+    @media only screen and (max-width: 1250px) and (min-width: 768px) {
+      height: 400px;
+    }
+    height: 550px;
     margin: 10px;
-    margin-bottom: 40px;
-    display: flex;
-    flex-direction: column;
-    -ms-flex-direction: column;  
   }
   &-pie-header {
     flex-grow: 1;
@@ -137,7 +134,7 @@
     position: relative;
     display: inline-block;
     flex-shrink: 1;
-    width: 100%;  
+    width: 100%;
   }
   &-pie-tip {
     position: absolute;
@@ -152,13 +149,13 @@
     font-size: 12px;
     text-shadow: 0 1px 0 #fff;
     line-height: 1.1;
-    letter-spacing: .06em;
-    box-shadow: 0 0 3px rgba(0,0,0,0.2), 0 1px 2px rgba(0,0,0,0.5);
-    -webkit-transform: all .3s;
-       -moz-transform: all .3s;
-        -ms-transform: all .3s;
-         -o-transform: all .3s;
-            transform: all .3s;
+    letter-spacing: 0.06em;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5);
+    -webkit-transform: all 0.3s;
+    -moz-transform: all 0.3s;
+    -ms-transform: all 0.3s;
+    -o-transform: all 0.3s;
+    transform: all 0.3s;
     pointer-events: none;
   }
 }
